@@ -2,9 +2,11 @@ package fr.damienchesneau.ugame.logique;
 
 import fr.damienchesneau.ugame.logique.entitys.Direction;
 import fr.damienchesneau.ugame.logique.entitys.DirectionChoose;
+import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.NoSuchElementException;
 
 /**
  *
@@ -19,7 +21,12 @@ class ArtificialInteligentServiceMinMax implements ArtificialInteligentService {
         GameService game = (GameService) gameToClone.clone();
         nbTrials++;
         while (game.isInGame()) {
-            DirectionChoose bestDirection = getBestPlat(game.clone());
+            DirectionChoose bestDirection = null;
+            try{
+                bestDirection = getBestPlat(game.clone());
+            }catch(NoSuchElementException e){
+                return solveGame(gameToClone);
+            }
             System.out.println("bBest dir = " + bestDirection.getDirection().name() + " Score = " + bestDirection.getScore() + " empty=" + game.getNumberOfEmptyCells());
             if (bestDirection.getGame().isInGame() && game.getNumberOfEmptyCells() > 1) {
                 game.startGame(bestDirection.getGame().getPlateau(), bestDirection.getScore());
@@ -27,13 +34,12 @@ class ArtificialInteligentServiceMinMax implements ArtificialInteligentService {
                 game.startGame(bestDirection.getGame().getPlateau(), bestDirection.getScore());
                 doAction(bestDirection, game);
                 if (bestDirection.getGame().isWin()) {
-                    System.out.println("Computer win ! nb trials="+ nbTrials);
+                    System.out.println("Computer win ! nb trials=" + nbTrials);
                     return game.getDatas();
                 } else {
-                    System.out.println("Re-try... nb trials="+ nbTrials);
+                    System.out.println("Re-try... nb trials=" + nbTrials);
                     return solveGame(gameToClone);
                 }
-                
             }
         }
         return null;
@@ -43,25 +49,33 @@ class ArtificialInteligentServiceMinMax implements ArtificialInteligentService {
         DirectionChoose best = null;
         int scorebests = 0;
         int visee = 100;
-        List<DirectionChoose> bestDir = new LinkedList<DirectionChoose>();
+        LinkedList<DirectionChoose> bestDir = new LinkedList<>();
         int scorebest = 0;
         for (int i = 0; i < 30; i++) {
             GameService clone = p.clone();
-            List<DirectionChoose> chooses = new LinkedList<DirectionChoose>();
+            LinkedList<DirectionChoose> chooses = new LinkedList<>();
             for (int j = 0; j < visee; j++) {
                 DirectionChoose bestDirection = getBestDirection(clone);
-                doAction(bestDirection, clone);
-                chooses.add(bestDirection);
-                if (bestDirection.getGame().isWin()) {
+                if (bestDirection != null) {
+                    doAction(bestDirection, clone);
+                    chooses.add(bestDirection);
+                    if (bestDirection.getGame().isWin()) {
+                        break;
+                    }
+                } else {
                     break;
                 }
             }
-            if (chooses.get(chooses.size() - 1).getScore() > scorebest || i == 0) {
-                scorebest = chooses.get(chooses.size() - 1).getScore();
-                bestDir = chooses;
+            if (!chooses.isEmpty()) {
+                if (chooses.getLast().getScore() > scorebest || i == 0) {
+                    scorebest = chooses.getLast().getScore();
+                    bestDir = chooses;
+                }
             }
+
         }
-        return bestDir.get(bestDir.size() - 1);
+        System.out.println("sd");
+        return bestDir.getLast();
     }
 
     private void doAction(DirectionChoose direction, GameService game) {
@@ -85,10 +99,10 @@ class ArtificialInteligentServiceMinMax implements ArtificialInteligentService {
         List<DirectionChoose> allDirectionsTested = testAllDirections(p);
         int size = allDirectionsTested.size();
         DirectionChoose bestDirection = null;
-        if(!allDirectionsTested.isEmpty()){
+        if (!allDirectionsTested.isEmpty()) {
             bestDirection = allDirectionsTested.get(0);
         }
-        
+
         for (int i = 1; i < size; i++) {
             if (allDirectionsTested.get(i).getScore() > bestDirection.getScore()) {
                 bestDirection = allDirectionsTested.get(i);
@@ -99,9 +113,8 @@ class ArtificialInteligentServiceMinMax implements ArtificialInteligentService {
 
     private List<DirectionChoose> testAllDirections(GameService plateauTOClone) throws CloneNotSupportedException {
         List<DirectionChoose> calulatedDirection = new LinkedList<>();
-
         GameService plateau = (GameService) plateauTOClone.clone();
-        if (!plateau.isGameOver()) {
+//        if (!plateau.isGameOver()) {
             Map<String, Object> goDown = plateau.goDown();
             int scoreDown = (int) goDown.get(GameService.KEY_SCORE);
             calulatedDirection.add(new DirectionChoose(scoreDown + plateau.getNumberOfEmptyCells(), Direction.DOWN, plateau));
@@ -111,19 +124,19 @@ class ArtificialInteligentServiceMinMax implements ArtificialInteligentService {
             int scoreUp = (int) goUp.get(GameService.KEY_SCORE);
             int[][] platgoUp = (int[][]) goUp.get(GameService.KEY_PLATEAU);
             calulatedDirection.add(new DirectionChoose(scoreUp + plateau.getNumberOfEmptyCells(), Direction.UP, plateau));
- 
+
             plateau = (GameService) plateauTOClone.clone();
             Map<String, Object> goRight = plateau.goRight();
             int scoreRight = (int) goRight.get(GameService.KEY_SCORE);
             int[][] patgoRight = (int[][]) goRight.get(GameService.KEY_PLATEAU);
             calulatedDirection.add(new DirectionChoose(scoreRight + plateau.getNumberOfEmptyCells(), Direction.RIGHT, plateau));
-           
+
             plateau = (GameService) plateauTOClone.clone();
             Map<String, Object> goLeft = plateau.goLeft();
             int scoreLeft = (int) goLeft.get(GameService.KEY_SCORE);
             int[][] platgoLeft = (int[][]) goLeft.get(GameService.KEY_PLATEAU);
             calulatedDirection.add(new DirectionChoose(scoreLeft + plateau.getNumberOfEmptyCells(), Direction.LEFT, plateau));
-        }
+//        }
         return calulatedDirection;
     }
 
